--- a/main.css
+++ b/main.css
@@ -15,23 +15,40 @@ body {
 
 }
 
-.intro {
+.title {
 
-  top: 0;
-  background: #B3B7FF;
- min-height: 70vh;
- padding-top: -600vh;
+top: 0;
+background: #B3B7FF;
+min-height: 70vh;
+padding-top: -600vh;
 margin-top: -00px;
+}
+
+.tabs {
+background-color: #B3B7FF;
+}
+
+
+
+.header {
+text-align: center;
+padding-top: 80px;
 
 }
+
+.sub {
+text-align: center;
+margin-top:-90px;
+}
+
 .starwars {
 display: flex;
 flex-wrap: wrap;
 justify-content: space-around;
 align-content:space-between;
 min-height: 55vh;
-padding-top: 45vh;
-background-color: #B3B7FF;
+padding-top: 10vh;
+background-image: url(./starssky.jpg);
 color: #ededed;
 
 }
@@ -40,46 +57,17 @@ width: 400px;
 height: 250px;
 /* border: 2px solid yellow */
 text-align: center;
-border: solid 1px black;
+border: solid 1px yellow;
 margin:20px;
-
-
-/* color:red;
-    background:#f0f0f0;
-    width:100%;
-    height:120px;
-    line-height:120px;
-    overflow:hidden;
-    position:relative; */
 }
-  /* @keyframes slide {
-    from { top:100%; transform: translate(0, 0); }
-    to { top: -100%; transform: translate(-100%, 0); }
-  }
-  @-webkit-keyframes slide {
-    from { top:100%; transform: translate(0, 0); }
-    to { top: -100%; transform: translate(-100%, 0); }
-  } */
-/* .crawl {
-  position:absolute;
-  top:0;
-  white-space: nowrap;
-  height:120px;
-  font-size:15px;
-  animation-name: slide;
-  animation-duration: 30s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  -webkit-animation-name: slide;
-  -webkit-animation-duration: 30s;
-  -webkit-animation-timing-function:linear;
-  -webkit-animation-iteration-count: infinite;
-} */
 
 .intro p {
   color: #2B2B2B;
 
+
 }
+
+
 
 nav ul {
   text-align: right;
@@ -95,7 +83,7 @@ nav ul li {
   margin-top: 25px;
 }
 
-nav ul li a {
+ nav ul li a {
   color: #2B2B2B;
   text-decoration: none;
 }
@@ -103,6 +91,7 @@ nav ul li a {
 nav ul li a:hover {
   color: #2B2B2B;
 }
+
 
 .work {
   padding-top: 60px;
