--- a/swpeople.css
+++ b/swpeople.css
@@ -97,9 +97,9 @@
     .button{
       color: black;
       background: rgba(255, 0, 0, 0.3);
-      width: 20%;
-      margin-left: 40%;
-      margin-right: 40%;
+      width: 25%;
+      margin-left: 37.7%;
+      margin-right: 0%;
       margin-top: 50px;
     }
 
@@ -110,8 +110,34 @@
       font-family: star jedi;
       color: black;
     }
+    nav ul {
+      text-align: right;
+      position: fixed;
+      width: 100%;
+      background-color: #B3B7FF;
+    }
 
-    .footer {
+    nav ul li {
+      display: inline-block;
+      margin: 55px;
+      margin-bottom: 15px;
+      margin-top: 25px;
+    }
+
+    nav ul li a {
+      color: #2B2B2B;
+      text-decoration: none;
+    }
+
+    nav ul li a:hover {
+      color: #2B2B2B;
+    }
+
+    footer {
+      padding: 20px;
+      background: #22313F;
+      color: white;
+      line-height: 40px;
       text-align: center;
-      margin-top:50px;
+      margin-top:40px;
     }
