--- a/swpeople.css
+++ b/swpeople.css
@@ -94,13 +94,28 @@
       display:flex;
       height: 100%;
     }
-    .button{
+    .button {
       color: black;
       background: rgba(255, 0, 0, 0.3);
       width: 25%;
       margin-left: 37.7%;
       margin-right: 0%;
       margin-top: 50px;
+
+    }
+
+    .label {
+      font-family: sans-serif;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      font-weight: bold;
+      font-size: 12px;
+      backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      color: white;
+      padding-top:5px;
     }
 
     .character {
@@ -110,16 +125,23 @@
       font-family: star jedi;
       color: black;
     }
+    nav {
+      display: flex;
+      flex-direction:row-reverse;
+      flex-wrap: nowrap;
+      flex-flow: row-reverse nowrap;
+
+    }
     nav ul {
       text-align: right;
       margin-left: 75%;
-      position: fixed;
       width: 100%;
       background-color: #B3B7FF;
     }
 
     nav ul li {
-      display: inline-block;
+      display: flex;
+      /* display: inline-block; */
       margin: 55px;
       margin-bottom: 15px;
       margin-top: 25px;
