--- a/main.css
+++ b/main.css
@@ -16,9 +16,10 @@ body {
 }
 
 .title {
-background: #B3B7FF;
-min-height: 60vh;
-padding-top: 27vh;
+/* background: #B3B7FF; */
+background-image: url(./alps.jpg);
+min-height: 65vh;
+padding-top: 40vh;
 }
 
 
@@ -28,14 +29,16 @@ padding-top: 27vh;
 .header {
 text-align: center;
 margin-top: -80px;
-color: #2B2B2B;
+color: black;
+font-size: 37px;
 
 }
 
 .sub {
 text-align: center;
 margin-top: -12vh;
-color: #2B2B2B;
+color: black;
+font-size:20px;
 }
 
 
@@ -66,13 +69,11 @@ margin:20px;
 
 }
 
-
-
 nav ul {
   text-align: right;
   position: fixed;
   width: 100%;
-  background-color: #B3B7FF;
+  background-color: #22313F;
 }
 
 nav ul li {
@@ -83,18 +84,20 @@ nav ul li {
 }
 
  nav ul li a {
-  color: #2B2B2B;
+  color: white;
   text-decoration: none;
 }
 
 nav ul li a:hover {
-  color: #2B2B2B;
+  color: #FFDCCC;
 }
 
 
 .work {
   padding-top: 60px;
   margin-top: -60px;
+  margin-bottom:60px;
+
 
 }
 
@@ -114,6 +117,8 @@ nav ul li a:hover {
   height: 220px;
   width: 280px;
   margin: 40px 100px;
+  background-color: white;
+
 
 }
 
