--- a/swpeople.css
+++ b/swpeople.css
@@ -89,6 +89,8 @@
       text-transform: capitalize;
     }
 
+
+
     .saberpic {
       backface-visibility: hidden;
       display:flex;
@@ -131,12 +133,15 @@
       flex-wrap: nowrap;
       flex-flow: row-reverse nowrap;
 
+
+
     }
     nav ul {
       text-align: right;
       margin-left: 75%;
       width: 100%;
-      background-color: #B3B7FF;
+
+
     }
 
     nav ul li {
@@ -145,15 +150,18 @@
       margin: 55px;
       margin-bottom: 15px;
       margin-top: 25px;
+
     }
 
     nav ul li a {
       color: #2B2B2B;
       text-decoration: none;
+
     }
 
     nav ul li a:hover {
-      color: #2B2B2B;
+      color: #FFDCCC;
+
     }
 
     footer {
