--- a/main.css
+++ b/main.css
@@ -41,6 +41,20 @@ color: black;
 font-size:20px;
 }
 
+.collab {
+text-align: center;
+padding-top: 200px;
+color: black;
+font-size: 20px;
+
+}
+.bus {
+  text-align: center;
+  /* margin-top: -12vh; */
+  color: black;
+  font-size:20px;
+  padding-bottom:10px;
+}
 
 
 .starwars {
@@ -148,7 +162,10 @@ nav ul li a:hover {
   padding-top:10px;
 }
 
+.crawlTitle {
+  color: red;
 
+  }
 
 
 .show-all:hover {
@@ -192,6 +209,7 @@ nav ul li a:hover {
   background: #e0ebe8;
   color: #2B2B2B;
   text-decoration: none;
+  margin-top: 40px;
 }
 
 .contact-details:hover {
