--- a/main.css
+++ b/main.css
@@ -40,7 +40,9 @@ margin-top: -12vh;
 color: black;
 font-size:20px;
 }
-
+.words {
+  color: white;
+}
 .collab {
 text-align: center;
 padding-top: 200px;
@@ -75,6 +77,8 @@ height: 250px;
 text-align: center;
 border: solid 1px yellow;
 margin:20px;
+padding:10px;
+
 }
 
 .intro p {
